# kevel

./: LICENSE  README.md  kevel  mkdocs.yml  pyproject.toml
docs/: contributing.md  faq.md  getting-started.md  index.md  requirements.txt
