[tool.poetry]
name = "kevel"
version = "0.1.0"
description = ""
authors = ["Germain LEFEBVRE <germain.lefebvre4@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.5.3"
mkdocs-autorefs = "^1.0.1"
mkdocs-click = "^0.8.1"
mkdocs-material = "^9.5.17"
mkdocs-material-extensions = "^1.3.1"
mkdocstrings = "^0.24.2"
mkdocstrings-python = "^1.9.2"
typing-extensions = "^4.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
